(tools #88) Prepare project for working with new Java language features
- move test cases to src/test-cases, add a pseudo-module (for IDEA) with
  language level 15-preview
- upgrade IDEA and gradle-intellij-plugin to 211
- add `isSealed` to `SrcElement` and set it in backends