@@ -56,6 +56,7 @@ test {
   doFirst {
     doPrepareProcessorTests()
   }
+  jvmArgs '--enable-preview'
 }
 
 task prepareProcessorTests() {
@@ -74,6 +75,32 @@ def doPrepareProcessorTests() {
   processorTestsProperties.withOutputStream {props.store(it, "Generated by gradle ${new Date()}")}
 }
 
-idea.module {
-  testSourceDirs += file('src/test/cases')
+project('test-cases') {
+  apply plugin: 'java'
+  apply plugin: 'idea'
+  def processor = parent
+  def casesDir = processor.file('src/test-cases')
+
+  buildDir = file("$processor.buildDir/test-cases-target")
+
+  tasks.withType(JavaCompile) {
+    options.release.set 15
+    options.compilerArgs.add '--enable-preview'
+  }
+
+  jar {
+    enabled false
+  }
+
+  dependencies {
+    testImplementation project(':annotations')
+    testImplementation dependencySets.tsconfig
+    testImplementation processor.sourceSets.test.output.classesDirs
+  }
+  compileTestJava {
+    dependsOn processor.compileTestJava
+  }
+  idea.module {
+    testSourceDirs += casesDir
+  }
 }
